--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="icon" href="images/ecommerce.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;600;700&family=Roboto:ital,wght@0,100;0,400;0,700;0,900;1,300;1,500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
