making header and adding logo

--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#" class="logo"><img src="images/logo.png" alt="logo" /> </a>
+    </header>
+  </body>
 </html>
