--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <body>
     <header>
       <a href="#" class="logo"><img src="images/logo.png" alt="logo" /> </a>
+      <ul class="navmenu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Page</a></li>
+        <li><a href="#">Docs</a></li>
+      </ul>
     </header>
   </body>
 </html>
