adding box icons

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         <li><a href="#">Page</a></li>
         <li><a href="#">Docs</a></li>
       </ul>
+
+      <div class="nav-icons">
+        <a href="#"><box-icon name="search-alt-2"></box-icon></a>
+        <a href="#"><box-icon name="user" type="solid"></box-icon></a>
+        <a href="#"><box-icon name="cart"></box-icon></a>
+        <div class="bx bx-menu" id="menu-icons">
+          <box-icon name="menu"></box-icon>
+        </div>
+      </div>
     </header>
   </body>
 </html>
