adding box icons

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </ul>
 
       <div class="nav-icons">
-        <a href="#"><box-icon name="search-alt-2"></box-icon></a>
-        <a href="#"><box-icon name="user" type="solid"></box-icon></a>
-        <a href="#"><box-icon name="cart"></box-icon></a>
+        <a href="#"><i class="bx bx-search-alt-2"></i></a>
+        <a href="#"><i class="bx bxs-user"></i></a>
+        <a href="#"><i class="bx bx-cart"></i></a>
         <div class="bx bx-menu" id="menu-icons">
           <box-icon name="menu"></box-icon>
         </div>
