--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="#">Docs</a></li>
       </ul>
 
-      <div class="nav-icons">
+      <div class="nav-icon">
         <a href="#"><i class="bx bx-search-alt-2"></i></a>
         <a href="#"><i class="bx bxs-user"></i></a>
         <a href="#"><i class="bx bx-cart"></i></a>
