changes in menu icon

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
         <a href="#"><i class="bx bx-search-alt-2"></i></a>
         <a href="#"><i class="bx bxs-user"></i></a>
         <a href="#"><i class="bx bx-cart"></i></a>
-        <div class="bx bx-menu" id="menu-icons">
-          <box-icon name="menu"></box-icon>
-        </div>
+        <div class="bx bx-menu" id="menu-icons"></div>
       </div>
     </header>
   </body>
