--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="#"><i class="bx bx-search-alt-2"></i></a>
         <a href="#"><i class="bx bxs-user"></i></a>
         <a href="#"><i class="bx bx-cart"></i></a>
-        <div class="bx bx-menu" id="menu-icons"></div>
+        <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
   </body>
