creating main home section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,19 @@
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
+
+    <section class="main-home">
+      <div class="main-text">
+        <h5>Winter Collection</h5>
+        <h1>
+          New Winter <br />
+          Collection
+        </h1>
+        <p>There's Nothing Like Trend</p>
+        <a href="#" class="main-btn"
+          >Shop Now <i class="bx bx-right-arrow-alt"></i
+        ></a>
+      </div>
+    </section>
   </body>
 </html>
