--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section class="main-home">
       <div class="main-text">
-        <h5>Winter Collection</h5>
+        <h5>Winter Collection 2023</h5>
         <h1>
           New Winter <br />
           Collection
