adding down arrow in html.index and styling it

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
           >Shop Now <i class="bx bx-right-arrow-alt"></i
         ></a>
       </div>
+      <div class="down-arrow">
+        <a href="#trending" class="down"
+          ><i class="bx bx-down-arrow-alt"></i
+        ></a>
+      </div>
     </section>
   </body>
 </html>
