making tending section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,29 @@
         ></a>
       </div>
     </section>
+
+    <!--trending-product-section -->
+    <section class="trending-product" id="trending">
+      <div class="center-text">
+        <h2>Our Trending <span>Products</span></h2>
+      </div>
+
+      <div class="products">
+        <div class="row">
+          <img src="images/cloth2.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
