adding products in trending section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           >Shop Now <i class="bx bx-right-arrow-alt"></i
         ></a>
       </div>
+      <!--down button-->
       <div class="down-arrow">
         <a href="#trending" class="down"
           ><i class="bx bx-down-arrow-alt"></i
@@ -82,6 +83,138 @@
             <i class="bx bx-star"></i>
             <i class="bx bx-star"></i>
             <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth2.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running Price</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/cloth1.png" alt="" />
+
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>New</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth3.png" alt="" />
+          <div class="product-text">
+            <h5>Hot</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth5.png" alt="" />
+
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth6.png" alt="" />
+          <div class="product-text">
+            <h5>Hot</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth7.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/cloth8.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
           </div>
         </div>
       </div>
