--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="row">
-          <img src="images/cloth2.png" alt="" />
+          <img src="images/cloth9.png" alt="" />
           <div class="product-text">
             <h5>Sale</h5>
           </div>
@@ -201,6 +201,42 @@
 
         <div class="row">
           <img src="images/cloth8.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/cloth10.png" alt="" />
+          <div class="product-text">
+            <h5>Sale</h5>
+          </div>
+          <div class="heart-icon"><i class="bx bx-heart"></i></div>
+          <div class="ratting">
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bx-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <div class="price">
+            <h4>Half Running</h4>
+            <p>$99-$129</p>
+          </div>
+        </div>
+        <div class="row">
+          <img src="images/cloth10.png" alt="" />
           <div class="product-text">
             <h5>Sale</h5>
           </div>
