styling product text which reside in top like sale or hot

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="row">
-          <img src="images/cloth9.png" alt="" />
+          <img src="images/cloth2.png" alt="" />
           <div class="product-text">
             <h5>Sale</h5>
           </div>
@@ -104,7 +104,7 @@
             <i class="bx bxs-star-half"></i>
           </div>
           <div class="price">
-            <h4>Half Running Price</h4>
+            <h4>Half Running</h4>
             <p>$99-$129</p>
           </div>
         </div>
