Creating client review section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,21 @@
       </div>
     </section>
 
+    <!--Client Review-Section-->
+
+    <section class="client-reviews">
+      <div class="reviews">
+        <h3>Client Reviews</h3>
+        <img src="" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+          fugiat iusto fuga praesentium optio, eaque rerum!
+        </p>
+      </div>
+    </section>
+
     <script src="java.js"></script>
   </body>
 </html>
