adding client reviews and styling it

--- a/index.html
+++ b/index.html
@@ -261,13 +261,15 @@
     <section class="client-reviews">
       <div class="reviews">
         <h3>Client Reviews</h3>
-        <img src="" alt="" />
+        <img src="images/pasang.jpg" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
           mollitia, molestiae quas vel sint commodi repudiandae consequuntur
           voluptatum laborum numquam blanditiis harum quisquam eius sed odit
           fugiat iusto fuga praesentium optio, eaque rerum!
         </p>
+        <h2>Pasang Temba Sherpa</h2>
+        <p>CEO of Whackamelon</p>
       </div>
     </section>
 
