creating update section

--- a/index.html
+++ b/index.html
@@ -273,6 +273,55 @@
       </div>
     </section>
 
+    <!--update-news-section-->
+
+    <section class="Update-news">
+      <div class="up-center-text">
+        <h2>New Updates</h2>
+      </div>
+      <div class="update-cart">
+        <img src="images/new1.jpg" alt="" />
+        <h5>26 jan 2023</h5>
+        <h4>Lets start bring sale on this summer vacation</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
+          accusantium nemo autem.
+        </p>
+        <h6>Continue Reading...</h6>
+      </div>
+
+      <div class="update-cart">
+        <img src="images/new2.jpg" alt="" />
+        <h5>26 jan 2023</h5>
+        <h4>Lets start bring sale on this summer vacation</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
+          accusantium nemo autem.
+        </p>
+        <h6>Continue Reading...</h6>
+      </div>
+
+      <div class="update-cart">
+        <img src="images/new3.jpg" alt="" />
+        <h5>26 jan 2023</h5>
+        <h4>Lets start bring sale on this summer vacation</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
+          accusantium nemo autem.
+        </p>
+        <h6>Continue Reading...</h6>
+      </div>
+    </section>
+
     <script src="java.js"></script>
   </body>
 </html>
