styling image of update

--- a/index.html
+++ b/index.html
@@ -280,45 +280,51 @@
         <h2>New Updates</h2>
       </div>
       <div class="update-cart">
-        <img src="images/new1.jpg" alt="" />
-        <h5>26 jan 2023</h5>
-        <h4>Lets start bring sale on this summer vacation</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
-          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
-          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
-          accusantium nemo autem.
-        </p>
-        <h6>Continue Reading...</h6>
+        <div class="cart">
+          <img src="images/new1.jpg" alt="" />
+          <h5>26 jan 2023</h5>
+          <h4>Lets start bring sale on this summer vacation</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+            voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+            fugiat iusto fuga praesentium optio, eaque rerum! Provident
+            similique accusantium nemo autem.
+          </p>
+          <h6>Continue Reading...</h6>
+        </div>
       </div>
 
       <div class="update-cart">
-        <img src="images/new2.jpg" alt="" />
-        <h5>26 jan 2023</h5>
-        <h4>Lets start bring sale on this summer vacation</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
-          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
-          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
-          accusantium nemo autem.
-        </p>
-        <h6>Continue Reading...</h6>
+        <div class="cart">
+          <img src="images/new2.jpg" alt="" />
+          <h5>26 jan 2023</h5>
+          <h4>Lets start bring sale on this summer vacation</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+            voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+            fugiat iusto fuga praesentium optio, eaque rerum! Provident
+            similique accusantium nemo autem.
+          </p>
+          <h6>Continue Reading...</h6>
+        </div>
       </div>
 
       <div class="update-cart">
-        <img src="images/new3.jpg" alt="" />
-        <h5>26 jan 2023</h5>
-        <h4>Lets start bring sale on this summer vacation</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-          mollitia, molestiae quas vel sint commodi repudiandae consequuntur
-          voluptatum laborum numquam blanditiis harum quisquam eius sed odit
-          fugiat iusto fuga praesentium optio, eaque rerum! Provident similique
-          accusantium nemo autem.
-        </p>
-        <h6>Continue Reading...</h6>
+        <div class="cart">
+          <img src="images/new3.jpg" alt="" />
+          <h5>26 jan 2023</h5>
+          <h4>Lets start bring sale on this summer vacation</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            mollitia, molestiae quas vel sint commodi repudiandae consequuntur
+            voluptatum laborum numquam blanditiis harum quisquam eius sed odit
+            fugiat iusto fuga praesentium optio, eaque rerum! Provident
+            similique accusantium nemo autem.
+          </p>
+          <h6>Continue Reading...</h6>
+        </div>
       </div>
     </section>
 
