--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="up-center-text">
         <h2>New Updates</h2>
       </div>
-      <div class="update-cart">
+      <div class="updatee-cart">
         <div class="cart">
           <img src="images/new1.jpg" alt="" />
           <h5>26 jan 2023</h5>
@@ -295,7 +295,7 @@
         </div>
       </div>
 
-      <div class="update-cart">
+      <div class="updatee-cart">
         <div class="cart">
           <img src="images/new2.jpg" alt="" />
           <h5>26 jan 2023</h5>
@@ -311,7 +311,7 @@
         </div>
       </div>
 
-      <div class="update-cart">
+      <div class="updatee-cart">
         <div class="cart">
           <img src="images/new3.jpg" alt="" />
           <h5>26 jan 2023</h5>
