styling cart h4 p and h6 part

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="up-center-text">
         <h2>New Updates</h2>
       </div>
-      <div class="updatee-cart">
+      <div class="update-cart">
         <div class="cart">
           <img src="images/new1.jpg" alt="" />
           <h5>26 jan 2023</h5>
@@ -293,9 +293,7 @@
           </p>
           <h6>Continue Reading...</h6>
         </div>
-      </div>
 
-      <div class="updatee-cart">
         <div class="cart">
           <img src="images/new2.jpg" alt="" />
           <h5>26 jan 2023</h5>
@@ -309,9 +307,7 @@
           </p>
           <h6>Continue Reading...</h6>
         </div>
-      </div>
 
-      <div class="updatee-cart">
         <div class="cart">
           <img src="images/new3.jpg" alt="" />
           <h5>26 jan 2023</h5>
