creating contact section in index.html

--- a/index.html
+++ b/index.html
@@ -324,6 +324,32 @@
       </div>
     </section>
 
+    <!--Contact-section-->
+
+    <section class="contact">
+      <div class="contact-info">
+        <div class="first-info">
+          <img src="" alt="" />
+
+          <p>
+            2345 Dhapakhel, Lalitpur <br />
+            Bagmati Pradesh <br />
+            Nepal
+          </p>
+          <p>1564646431</p>
+          <p>evild537@gmail.com</p>
+
+          <div class="social-icon">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="java.js"></script>
   </body>
 </html>
