adding social icons

--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
           <p>evild537@gmail.com</p>
 
           <div class="social-icon">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
       </div>
