adding second and third info

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <section class="contact">
       <div class="contact-info">
         <div class="first-info">
-          <img src="" alt="" />
+          <img src="images/logo.png" alt="" />
 
           <p>
             2345 Dhapakhel, Lalitpur <br />
@@ -346,6 +346,22 @@
             <a href="#"><i class="bx bxl-youtube"></i></a>
             <a href="#"><i class="bx bxl-linkedin"></i></a>
           </div>
+        </div>
+        <div class="second-info">
+          <h4>Support</h4>
+          <p>Contact us</p>
+          <p>About page</p>
+          <p>Size Guide</p>
+          <p>Shopping and Returns</p>
+          <p>Privacy</p>
+        </div>
+        <div class="third-info">
+          <h4>Shop</h4>
+          <p>Men's Shopping</p>
+          <p>Women's Shopping</p>
+          <p>Kid's Shopping</p>
+          <p>Discount</p>
+          <p>Sale</p>
         </div>
       </div>
     </section>
