adding more info and styling contact, contact-info,first-info

--- a/index.html
+++ b/index.html
@@ -363,6 +363,23 @@
           <p>Discount</p>
           <p>Sale</p>
         </div>
+
+        <div class="fourth-info">
+          <h4>Company</h4>
+          <p>About</p>
+          <p>Blog</p>
+          <p>Affiliate</p>
+          <p>Login</p>
+        </div>
+        <div class="fifth-info">
+          <h4>Subscribe</h4>
+          <p>
+            Receive updates, Hot Deals, Discounts Straight in your Inbox Daily
+          </p>
+          <p>
+            Receive updates, Hot Deals, Discounts Straight in your Inbox Daily
+          </p>
+        </div>
       </div>
     </section>
 
