adding end text and social icon scaling styling and hover

--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
       </div>
     </section>
 
+    <div class="end-text">
+      <p>Copyright &copy @2023. All Rights Reserved. Designed by Anup</p>
+    </div>
+
     <script src="java.js"></script>
   </body>
 </html>
